<resources>
    <string name="app_name">BTPing</string>
    <string name="beacon_button_descr">Attivazione Beacon</string>
    <string name="scanning_button_descr">Attivazione Scansione</string>
    <string name="status_scanning_on">Scanning dei beacon attivato!</string>
    <string name="status_scanning_off">Scanning dei beacon disattivato!</string>
    <string name="status_beacon_on">Beacon attivato!</string>
    <string name="status_beacon_off">Beacon disattivato!</string>
    <string name="channel_name">Scanner channel</string>
    <string name="channel_description">Notification channel for scanner</string>
    <string name="id_beacon">ID Beacon</string>
    <string name="conferma_id">Conferma ID</string>
    <string name="item_title">UID</string>
    <string name="item_description_1">Major</string>
    <string name="item_description_2">Minor</string>
    <string name="produci_log">Produci Log</string>
</resources>
