<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityTest">

    <Switch
        android:id="@+id/beaconSwitch"
        android:layout_width="219dp"
        android:layout_height="49dp"
        android:layout_marginTop="50dp"
        android:text="@string/beacon_button_descr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Switch
        android:id="@+id/scanSwitch"
        android:layout_width="219dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/scanning_button_descr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaconSwitch" />

    <EditText
        android:id="@+id/beaconIDTextView"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanSwitch"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="124dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/id_beacon"
        android:textAlignment="center"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/beaconIDTextView"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanSwitch" />

    <Button
        android:id="@+id/confIDButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/conferma_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaconIDTextView" />

    <ListView
        android:id="@+id/beaconList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confIDButton" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produci_log"
        app:layout_constraintBottom_toTopOf="@+id/beaconList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toEndOf="@+id/confIDButton"
        app:layout_constraintTop_toBottomOf="@+id/beaconIDTextView"
        app:layout_constraintVertical_bias="0.615" />

</androidx.constraintlayout.widget.ConstraintLayout>